crates/plotnik-tests/tests/macro_ui/fail/ambiguous_subgrammar.stderr
error: package `tree-sitter-typescript` ships several grammars (`tsx`, `typescript`); pick one with `grammar = "tree-sitter-typescript/tsx"`
 --> tests/macro_ui/fail/ambiguous_subgrammar.rs:5:15
  |
5 |     grammar = "tree-sitter-typescript",
  |               ^^^^^^^^^^^^^^^^^^^^^^^^
